--- a/storage.yaml
+++ b/storage.yaml
@@ -9,21 +9,15 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 20Gi
+      storage: 7Gi
 
 ---
 # How do we want it implemented
 apiVersion: v1
-kind: PersistentVolume
+kind: StorageClass
 metadata:
-  name: local-storage
-spec:
-  storageClassName: mylocalstorage
-  accessModes:
-    - ReadWriteOnce
-  capacity:
-    storage: 20Gi
-  hostPath:
-    path: "/mnt/some new/directory/structure/"
-    type: DirectoryOrCreate
+  name: cloud-ssd
+provisioner: kubernetes.io/aws-ebs
+parameters:
+  type: gp2
 
